visual bug fixes: navbar menus stay open on hover, Evidence logo resize, dashboard tables aligned correctly in Safari (#9986)
* make navbar menus stay open on hover and fix mobile image link

* fix dashboard table width issue on safari

--- a/services/QuillLMS/app/assets/stylesheets/pages/teacher_dashboard/post_checklist.scss
+++ b/services/QuillLMS/app/assets/stylesheets/pages/teacher_dashboard/post_checklist.scss
@@ -72,11 +72,10 @@
 
       .data-table {
         overflow: visible;
-        padding: 0px 20px;
-        overflow: visible;
 
         .data-table-row, .data-table-headers {
           padding: 0px 8px;
+          margin: 0px 20px;
         }
       }
 
